test/tests/compiler/10_file-scope_variables_and_storage-class_specifiers/invalid_types/conflicting_function_linkage.plx
#  a function declared without the 'static'
#  * keyword always has external linkage
#  
pub fn foo(none) i32;

pub fn main(none) i32 {
    return foo()
}

#  Can't define a symbol with external linkage,
#  * then redefine it with internal linkage
#  
fn foo(none) i32 {
    return false
}
